--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,6 @@ sonar.projectKey=nfrechette_rtm
 sonar.projectName=Realtime Math
 sonar.projectVersion=1.0.0
 
-sonar.sources=includes
+sonar.sources=includes,tests/sources,tests/main_generic
 
 sonar.cfamily.build-wrapper-output=bw_output
