--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ include(CMakePlatforms)
 set(USE_AVX_INSTRUCTIONS false CACHE BOOL "Use AVX instructions")
 set(USE_SIMD_INSTRUCTIONS true CACHE BOOL "Use SIMD instructions")
 set(CPU_INSTRUCTION_SET false CACHE STRING "CPU instruction set")
+set(BUILD_BENCHMARK_EXE false CACHE BOOL "Enable the benchmark projects")
 
 # Grab all of our include files
 file(GLOB_RECURSE RTM_INCLUDE_FILES LIST_DIRECTORIES false
@@ -36,3 +37,12 @@ enable_testing()
 
 # Add other projects
 add_subdirectory("${PROJECT_SOURCE_DIR}/tests")
+
+if(BUILD_BENCHMARK_EXE)
+    # Google Benchmark
+    set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "No need to run benchmark's tests" FORCE)
+    add_subdirectory("${PROJECT_SOURCE_DIR}/external/benchmark")
+
+    # Our benchmark executable
+    add_subdirectory("${PROJECT_SOURCE_DIR}/tools/bench")
+endif()
