--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ include(CMakeCompiler)
 include(CMakePlatforms)
 
 set(USE_AVX_INSTRUCTIONS false CACHE BOOL "Use AVX instructions")
+set(USE_AVX2_INSTRUCTIONS false CACHE BOOL "Use AVX2 instructions")
 set(USE_SIMD_INSTRUCTIONS true CACHE BOOL "Use SIMD instructions")
 set(CPU_INSTRUCTION_SET false CACHE STRING "CPU instruction set")
 set(BUILD_BENCHMARK_EXE false CACHE BOOL "Enable the benchmark projects")
