--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,4 +38,4 @@ install:
 
 build_script:
 - cmd: >-
-    .\tools\appveyor_ci.bat %APPVEYOR_BUILD_WORKER_IMAGE% %platform% %configuration% %toolchain% %PYTHON%
+    .\tools\appveyor_ci.bat "%APPVEYOR_BUILD_WORKER_IMAGE%" %platform% %configuration% %toolchain% "%PYTHON%"
