--- a/.editorconfig
+++ b/.editorconfig
@@ -5,7 +5,7 @@ end_of_line = lf
 insert_final_newline = true
 
 # Matches multiple files with brace expansion notation
-[*.{cpp,h,py,cmake}]
+[*.{cpp,h,py,cmake,txt,java}]
 charset = utf-8
 indent_style = tab
 indent_size = 4
@@ -13,3 +13,8 @@ trim_trailing_whitespace = true
 
 [*.md]
 trim_trailing_whitespace = false
+
+[*.{gradle,gradle.in}]
+indent_style = space
+indent_size = 4
+trim_trailing_whitespace = true
