--- a/tools/android_misc/app/src/main/AndroidManifest.xml.in
+++ b/tools/android_misc/app/src/main/AndroidManifest.xml.in
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.rtm.benchmark"
-      android:versionCode="1"
-      android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="3" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="@RTM_ANDROID_PROJECT_PACKAGE_NAME@">
     <application android:label="@string/app_name">
-        <activity android:name=".MainActivity"
-                  android:label="@string/app_name">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
