--- a/tools/android_misc/app/src/main/res/values/strings.xml.in
+++ b/tools/android_misc/app/src/main/res/values/strings.xml.in
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">RTM Unit Tests</string>
+    <string name="app_name">@RTM_ANDROID_PROJECT_NAME@</string>
 </resources>
