fix(bench): add missing Google Benchmark cmake reference for desktop

--- a/tools/bench/main_generic/CMakeLists.txt
+++ b/tools/bench/main_generic/CMakeLists.txt
@@ -3,6 +3,10 @@ project(rtm_bench CXX)
 
 set(CMAKE_CXX_STANDARD 11)
 
+# Google Benchmark
+set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "No need to run benchmark's tests" FORCE)
+add_subdirectory("${PROJECT_SOURCE_DIR}/../../../external/benchmark" google_benchmark)
+
 include_directories("${PROJECT_SOURCE_DIR}/../../../includes")
 include_directories("${PROJECT_SOURCE_DIR}/../../../external/benchmark/include")
 
