--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,3 +5,4 @@ sonar.projectVersion=1.1.0
 sonar.sources=includes,tests/sources,tests/main_generic
 
 sonar.cfamily.build-wrapper-output=bw_output
+sonar.cfamily.threads=2
