refactor(tests): add switch to control inclusion of vector_mix unit tests
The vector_mix unit tests take a long time to compile. We strip them out
by default since that code is unlikely to change. CI won't be testing them
but we'll test them every release.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ include(CMakePlatforms)
 set(USE_AVX_INSTRUCTIONS false CACHE BOOL "Use AVX instructions")
 set(USE_AVX2_INSTRUCTIONS false CACHE BOOL "Use AVX2 instructions")
 set(USE_SIMD_INSTRUCTIONS true CACHE BOOL "Use SIMD instructions")
+set(WITH_VECTOR_MIX_TESTS false CACHE BOOL "Enable vector_mix unit tests")
 set(CPU_INSTRUCTION_SET false CACHE STRING "CPU instruction set")
 set(BUILD_BENCHMARK_EXE false CACHE BOOL "Enable the benchmark projects")
 
