--- a/tools/android_misc/app/build.gradle.in
+++ b/tools/android_misc/app/build.gradle.in
@@ -11,7 +11,8 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
-                arguments '-DUSE_SIMD_INSTRUCTIONS=@USE_SIMD_INSTRUCTIONS@'
+                arguments '-DUSE_SIMD_INSTRUCTIONS=@USE_SIMD_INSTRUCTIONS@',
+                          '-DWITH_VECTOR_MIX_TESTS=@WITH_VECTOR_MIX_TESTS@'
             }
         }
         ndk {
