chore: add sonarcloud organization

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,5 @@
+sonar.organization=nfrechette-github
+
 sonar.projectKey=nfrechette_rtm
 sonar.projectName=Realtime Math
 sonar.projectVersion=2.0.0
