--- a/.github/workflows/build_pull_request.yml
+++ b/.github/workflows/build_pull_request.yml
@@ -1,12 +1,6 @@
-name: build
+name: build pull request
 
 on:
-  push:
-    branches:
-      - '**'
-    paths-ignore:
-      - docs/**
-      - '**/*.md'
   pull_request:
     branches:
       - '**'
