chore(ci): use -clean_only to avoid cmake issues

--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -134,7 +134,7 @@ jobs:
       - name: Clean
         uses: docker://ghcr.io/nfrechette/toolchain-amd64-linux-emscripten:v1
         with:
-          args: 'python3 make.py -ci -clean'
+          args: 'python3 make.py -ci -clean_only'
       - name: Build (release)
         uses: docker://ghcr.io/nfrechette/toolchain-amd64-linux-emscripten:v1
         with:
