--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -163,29 +163,20 @@ jobs:
         compiler: [vs2022, vs2022-clang]
         build_config: [debug, release]
         cpu: [x86, x64, arm64]
+        simd: [-simd, -nosimd, -avx]
         exclude:
+          # Don't run arm64 with clang
           - compiler: vs2022-clang
             cpu: arm64
+          # Don't run AVX with arm64
+          - cpu: arm64
+            simd: -avx
     steps:
       - name: Git checkout
         uses: actions/checkout@v2
         with:
           submodules: 'recursive'
       - name: Building (${{ matrix.build_config }}-${{ matrix.cpu }})
-        run: python3 make.py -ci -compiler ${{ matrix.compiler }} -config ${{ matrix.build_config }} -cpu ${{ matrix.cpu }} -build
-      - name: Running unit tests (debug-x64)
-        run: python3 make.py -ci -compiler ${{ matrix.compiler }} -config ${{ matrix.build_config }} -cpu ${{ matrix.cpu }} -unit_test
-      - name: Clean
-        run: python3 make.py -clean_only
-      - name: Building (${{ matrix.build_config }}-${{ matrix.cpu }}) nosimd
-        run: python3 make.py -ci -compiler ${{ matrix.compiler }} -config ${{ matrix.build_config }} -cpu ${{ matrix.cpu }} -build -nosimd
-      - name: Running unit tests (debug-x64)
-        run: python3 make.py -ci -compiler ${{ matrix.compiler }} -config ${{ matrix.build_config }} -cpu ${{ matrix.cpu }} -unit_test -nosimd
-      - name: Clean
-        run: python3 make.py -clean_only
-      - name: Building (${{ matrix.build_config }}-${{ matrix.cpu }}) AVX
-        if: ${{ matrix.compiler != 'arm64' }}
-        run: python3 make.py -ci -compiler ${{ matrix.compiler }} -config ${{ matrix.build_config }} -cpu ${{ matrix.cpu }} -build -avx
-      - name: Running unit tests (debug-x64)
-        if: ${{ matrix.compiler != 'arm64' }}
-        run: python3 make.py -ci -compiler ${{ matrix.compiler }} -config ${{ matrix.build_config }} -cpu ${{ matrix.cpu }} -unit_test -avx
+        run: python3 make.py -ci -compiler ${{ matrix.compiler }} -config ${{ matrix.build_config }} -cpu ${{ matrix.cpu }} -build ${{ matrix.simd }}
+      - name: Running unit tests (${{ matrix.build_config }}-${{ matrix.cpu }})
+        run: python3 make.py -ci -compiler ${{ matrix.compiler }} -config ${{ matrix.build_config }} -cpu ${{ matrix.cpu }} -unit_test ${{ matrix.simd }}
