--- a/tools/android_misc/app/build.gradle.in
+++ b/tools/android_misc/app/build.gradle.in
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
+    ndkVersion "20.1.5948944"
     compileSdkVersion 28
     defaultConfig {
         applicationId "@RTM_ANDROID_PROJECT_PACKAGE_NAME@"
